--- a/package.json
+++ b/package.json
@@ -1,23 +1,32 @@
 {
   "name": "motoyaapp",
+  "main": "main.js",
   "version": "0.0.0",
+  "author": "lizana_dev",
+  "description": "This project was generated with Angular CLI version 18.2.6.",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "build": "ng build --configuration production",
+    "electron": "npm run build && electron .",
+    "electron:dev": "ng build --configuration development && electron .",
+    "dist": "ng build --base-href ./ && electron-builder"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^18.2.0",
+    "@angular/cdk": "^18.2.14",
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
+    "@angular/fire": "^18.0.1",
     "@angular/forms": "^18.2.0",
+    "@angular/material": "^18.2.14",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@tailwindcss/postcss": "^4.0.9",
+    "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
@@ -33,6 +42,15 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "~5.5.2"
+  },
+  "build": {
+    "appId": "com.motoyaapp",
+    "productName": "MotoyaApp",
+    "files": [
+      "**/*",
+      "dist/motoyaapp/browser**"
+    ]
   }
 }
