--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build": "ng build --configuration production",
     "electron": "npm run build && electron .",
     "electron:dev": "ng build --configuration development && electron .",
-    "dist": "ng build --base-href ./ && electron-builder"
+    "dist": "npm run build && electron-builder"
   },
   "private": true,
   "dependencies": {
@@ -36,6 +36,8 @@
     "@angular/cli": "^18.2.6",
     "@angular/compiler-cli": "^18.2.0",
     "@types/jasmine": "~5.1.0",
+    "electron": "^36.0.0",
+    "electron-builder": "^26.0.12",
     "jasmine-core": "~5.2.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
@@ -48,9 +50,25 @@
   "build": {
     "appId": "com.motoyaapp",
     "productName": "MotoyaApp",
+    "directories": {
+      "output": "dist_electron"
+    },
     "files": [
-      "**/*",
-      "dist/motoyaapp/browser**"
-    ]
+      "dist/**/*",
+      "main.js",
+      "preload.js"
+    ],
+    "win": {
+      "target": "nsis",
+      "icon": "assets/icon.ico"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "assets/icon.icns"
+    },
+    "linux": {
+      "target": "AppImage",
+      "icon": "assets"
+    }
   }
 }
