--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@tailwindcss/postcss": "^4.0.9",
+    "electron-updater": "^6.6.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -62,13 +63,10 @@
       "target": "nsis",
       "icon": "assets/icon.ico"
     },
-    "mac": {
-      "target": "dmg",
-      "icon": "assets/icon.icns"
-    },
-    "linux": {
-      "target": "AppImage",
-      "icon": "assets"
-    }
+    "publish": [
+      {
+        "provider": "github"
+      }
+    ]
   }
 }
