--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@tailwindcss/postcss": "^4.0.9",
+    "electron-store": "^10.0.1",
     "electron-updater": "^6.6.2",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
