--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -7,9 +7,12 @@
     "types": []
   },
   "files": [
-    "src/main.ts"
+    "src/main.ts",
+    "src/**/*.d.ts",
+    "src/**/*.ts"
   ],
   "include": [
     "src/**/*.d.ts"
+
   ]
 }
