--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "motoyaapp",
   "main": "main.js",
-  "version": "1.0.3",
+  "version": "1.2.0",
   "author": "lizana_dev",
   "description": "This project was generated with Angular CLI version 18.2.6.",
   "scripts": {
@@ -9,6 +9,7 @@
     "start": "ng serve",
     "build": "ng build --configuration production",
     "electron": "npm run build && electron .",
+    "release": "standard-version",
     "electron:dev": "ng build --configuration development && electron .",
     "dist": "electron-builder --win --x64 --publish always"
   },
@@ -46,6 +47,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "standard-version": "^9.5.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.5.2"
   },
