--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "motoyaapp",
   "main": "main.js",
-  "version": "1.2.4",
+  "version": "2.0.1",
   "author": "lizana_dev",
   "description": "This project was generated with Angular CLI version 18.2.6.",
   "scripts": {
@@ -11,7 +11,7 @@
     "electron": "npm run build && electron .",
     "release": "standard-version",
     "electron:dev": "ng build --configuration development && electron .",
-    "dist": "electron-builder --win --x64 --publish always"
+    "dist": "electron-builder --win --x64 --publish never"
   },
   "private": true,
   "dependencies": {
