--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@tailwindcss/postcss": "^4.0.9",
     "electron-store": "^10.0.1",
     "electron-updater": "^6.6.2",
+    "ngx-image-cropper": "^9.1.5",
     "postcss": "^8.5.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
